feat: create item dynamically with custom task

--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
             To-Do List
         </div>
 
-        <div class="todo_list">
-            <label class="todo_item">
-                <input type="checkbox">
-                <div>teste de item 1</div>
-                <input type="button" value="X">
-            </label>
-            <label class="todo_item">
-                <input type="checkbox">
-                <div>teste de item 2</div>
-                <input type="button" value="X">
-            </label>
-        </div>
+        <div class="todo_list" id="todoList"></div>
 
         <div class="todo_new-item">
             <div>&and;</div>
