--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="todo_new-item">
             <div>&and;</div>
-            <input type="text" placeholder="Digite e pressione enter para adicionar a tarefa">
+            <input type="text" id="newItem" placeholder="Digite e pressione enter para adicionar a tarefa">
             <div>&and;</div>
         </div>
     </div>
