feat: to-do list style

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./img/icon.png">
     <link rel="stylesheet" href="style.css">
-    <title>todo-list</title>
+    <title>To-Do List</title>
 </head>
 <body>
     <div class="todo">
         <div class="todo_title">
-            To-Do List
+            <img src="./img/icon.svg" alt="Icon de lista"/>
+            <h1>To-Do List</h1>
         </div>
 
         <div class="todo_list" id="todoList"></div>
 
         <div class="todo_new-item">
-            <div>&and;</div>
-            <input type="text" id="newItem" placeholder="Digite e pressione enter para adicionar a tarefa">
-            <div>&and;</div>
+            <input type="text" id="newItem" placeholder="Digite aqui sua tarefa e pressione enter para adicionar">
         </div>
     </div>
     <script src="app.js"></script>
