chore: placeholder change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="todo_list" id="todoList"></div>
 
         <div class="todo_new-item">
-            <input type="text" id="newItem" placeholder="Digite aqui sua tarefa e pressione enter para adicionar">
+            <input type="text" id="newItem" placeholder="Digite aqui sua tarefa e pressione enter">
         </div>
     </div>
     <script src="app.js"></script>
